# ita_supperzl

./: .env.example  .gitignore  README.md  input.example.json  pyproject.toml
artifacts/: .gitkeep
lib/: __init__.py  batch_tui.py  cli.py  codex_oauth.py  config.py  errors.py  idp_client.py  logging_utils.py  sso_http_flow.py  sub2api_export.py
scripts/: run_batch_tui.py  run_idp_codex.py
tests/: test_codex_oauth.py  test_idp_client.py  test_independent_imports.py  test_sso_http_flow.py  test_sub2api_export.py
